--- a/BancoInterfaces/Banco/Banco.csproj
+++ b/BancoInterfaces/Banco/Banco.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Cliente.cs" />
     <Compile Include="Conta.cs" />
     <Compile Include="ContaCorrente.cs" />
+    <Compile Include="ContaInvestimento.cs" />
     <Compile Include="ContaPoupanca.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -61,8 +62,11 @@
     <Compile Include="FormCadastroContas.Designer.cs">
       <DependentUpon>FormCadastroContas.cs</DependentUpon>
     </Compile>
+    <Compile Include="ITributavel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SeguroDeVida.cs" />
+    <Compile Include="TotalizadorDeTributos.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
